# Veitor

./: .gitignore  CMakeLists.txt  Makefile  vorpal.c
src/: Makefile  test  test.c  vorpal  vorpal.c
